--- a/pytesseract.ipynb
+++ b/pytesseract.ipynb
@@ -64,7 +64,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "id": "1bb462bb-4e3c-49cc-934b-60c601ab48dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "directory_path = \"/home/sheriff/Downloads/cor\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "bd396091-f245-4d44-8e0a-7af14a8a8c6f",
    "metadata": {},
    "outputs": [
@@ -72,19 +82,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "10\n",
-      "20\n",
-      "error IMG-20241119-WA0013.jpg not enough values to unpack (expected 2, got 1)\n",
-      "30\n",
-      "40\n",
-      "error IMG-20241119-WA0004.jpg not enough values to unpack (expected 2, got 1)\n",
-      "50\n",
-      "60\n",
-      "error IMG-20241119-WA0070.jpg too many values to unpack (expected 2)\n",
-      "error IMG-20241119-WA0028.jpg cannot unpack non-iterable NoneType object\n",
-      "70\n",
-      "80\n"
+      "error IMG-20241130-WA0022.jpg cannot unpack non-iterable NoneType object\n",
+      "0\n"
      ]
     }
    ],
@@ -109,10 +108,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "deea2f9c-905d-4a29-a7ae-77388804529d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "No objects to concatenate",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconcat\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdfs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.devpy/lib/python3.10/site-packages/pandas/core/reshape/concat.py:382\u001b[0m, in \u001b[0;36mconcat\u001b[0;34m(objs, axis, join, ignore_index, keys, levels, names, verify_integrity, sort, copy)\u001b[0m\n\u001b[1;32m    379\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m copy \u001b[38;5;129;01mand\u001b[39;00m using_copy_on_write():\n\u001b[1;32m    380\u001b[0m     copy \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m--> 382\u001b[0m op \u001b[38;5;241m=\u001b[39m \u001b[43m_Concatenator\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    383\u001b[0m \u001b[43m    \u001b[49m\u001b[43mobjs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    384\u001b[0m \u001b[43m    \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    385\u001b[0m \u001b[43m    \u001b[49m\u001b[43mignore_index\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mignore_index\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    386\u001b[0m \u001b[43m    \u001b[49m\u001b[43mjoin\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mjoin\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    387\u001b[0m \u001b[43m    \u001b[49m\u001b[43mkeys\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mkeys\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    388\u001b[0m \u001b[43m    \u001b[49m\u001b[43mlevels\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mlevels\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    389\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnames\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnames\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    390\u001b[0m \u001b[43m    \u001b[49m\u001b[43mverify_integrity\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mverify_integrity\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    391\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcopy\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcopy\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    392\u001b[0m \u001b[43m    \u001b[49m\u001b[43msort\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msort\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    393\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    395\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m op\u001b[38;5;241m.\u001b[39mget_result()\n",
+      "File \u001b[0;32m~/.devpy/lib/python3.10/site-packages/pandas/core/reshape/concat.py:445\u001b[0m, in \u001b[0;36m_Concatenator.__init__\u001b[0;34m(self, objs, axis, join, keys, levels, names, ignore_index, verify_integrity, copy, sort)\u001b[0m\n\u001b[1;32m    442\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mverify_integrity \u001b[38;5;241m=\u001b[39m verify_integrity\n\u001b[1;32m    443\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcopy \u001b[38;5;241m=\u001b[39m copy\n\u001b[0;32m--> 445\u001b[0m objs, keys \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_clean_keys_and_objs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobjs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkeys\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    447\u001b[0m \u001b[38;5;66;03m# figure out what our result ndim is going to be\u001b[39;00m\n\u001b[1;32m    448\u001b[0m ndims \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_ndims(objs)\n",
+      "File \u001b[0;32m~/.devpy/lib/python3.10/site-packages/pandas/core/reshape/concat.py:507\u001b[0m, in \u001b[0;36m_Concatenator._clean_keys_and_objs\u001b[0;34m(self, objs, keys)\u001b[0m\n\u001b[1;32m    504\u001b[0m     objs_list \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(objs)\n\u001b[1;32m    506\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(objs_list) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m--> 507\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo objects to concatenate\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    509\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m keys \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    510\u001b[0m     objs_list \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(com\u001b[38;5;241m.\u001b[39mnot_none(\u001b[38;5;241m*\u001b[39mobjs_list))\n",
+      "\u001b[0;31mValueError\u001b[0m: No objects to concatenate"
+     ]
+    }
+   ],
    "source": [
     "df = pd.concat(dfs)"
    ]
@@ -217,25 +231,61 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89f349d4-bc85-48a2-bdc9-50317ee363ca",
+   "id": "fa02e3ef-f4e2-4f7a-be17-d9db41548c33",
    "metadata": {},
    "source": [
-    "## Analyze df"
+    "### errores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5334a9a5-325e-4b42-8388-31c7df03531d",
+   "metadata": {},
+   "source": [
+    "algunas imágenes llevaban errores, los hago a mano y los junto"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ac412cd-083b-489a-b79d-ad689148f6bb",
+   "metadata": {},
+   "source": [
+    "y ahora lo importo y ordeno"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8a89d520-7f7b-43b2-992d-9c4663e7228a",
+   "id": "e5f0b935-ebaf-45bb-aa95-b81c79836cbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "bcc41dc9-b389-453c-b49a-65fdbc645dc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_excel(\"./edges_commutators_tratados.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2c3c3bf1-c345-453b-ba70-90c4f18c18cd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(736, 5)"
+       "(786, 5)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,28 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "88dccee5-8887-49c0-a15e-0f3b177e2338",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " E-Con: MASTER ALGS!!! \n",
-      " E-Con: MASTER ALGS!!! —\n"
-     ]
-    }
-   ],
-   "source": [
-    "for g in df.group.unique():\n",
-    "    if \"(\" not in g:\n",
-    "        print(g)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "3b0374bb-0af8-4c03-841e-6c28ab2e8025",
    "metadata": {},
    "outputs": [
@@ -379,15 +408,15 @@
      "data": {
       "text/plain": [
        "first_letter\n",
-       "R    40\n",
-       "B    40\n",
-       "V    38\n",
-       "Y    36\n",
-       "G    36\n",
+       "B    45\n",
+       "R    42\n",
+       "Z    41\n",
+       "M    41\n",
+       "V    39\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,17 +427,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "685929b8-5278-495a-8efc-6f731db838c6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.sort_values(\"filename\").to_excel(\"/home/sheriff/Downloads/edges_commutators_tratados.xlsx\", index=False)"
+    "df.sort_values(\"filename\").to_excel(\"./edges_commutators_tratados2.xlsx\", index=False)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1a278c37-a42c-4850-adcd-a4eba9dcee0e",
+   "id": "a94d32d2-c896-4957-b692-0699d8b48a28",
    "metadata": {},
    "source": [
     "Ahora se lo paso a Guille y que lo repase y limpie"
@@ -417,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d8e4a26-c34c-49cb-91e7-8cba84a39992",
+   "id": "35c55282-6629-4ede-8dc5-48f60701cf5d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -425,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdd3e550-15d6-4474-88e4-4e7c79e095c7",
+   "id": "88d10253-7887-402e-a8d7-c11b91dfae88",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -433,10 +462,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1c8717e-a38a-4106-9186-cffdac8c4126",
+   "id": "9688e093-abb0-4084-a35d-bca85325a9cc",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb0fb191-1010-4459-bef7-c114b1884e66",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2171a316-d8e1-4fbd-ad38-60cc27c2e332",
+   "metadata": {},
+   "source": [
+    "### análisis imágenes"
+   ]
   },
   {
    "cell_type": "code",
