--- a/corners_jack_cai.ipynb
+++ b/corners_jack_cai.ipynb
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 21,
    "id": "91770000-3de7-4b98-bb27-b651fb9d045d",
    "metadata": {},
    "outputs": [],
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 22,
    "id": "1fc994fd-654a-4ce4-aca7-5a869afc000e",
    "metadata": {},
    "outputs": [],
@@ -421,8 +421,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "2589c8aa-bd4b-487a-a676-fd9e6752c30b",
+   "execution_count": null,
+   "id": "623bfd48-96f8-4be6-a202-9dc18feaea2c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43888317-1fef-4649-b878-9a452d488d02",
+   "metadata": {},
+   "source": [
+    "I swapped first and second stickers, fixing now"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "da7577da-ec16-4925-a89d-6576367e5882",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.rename(columns={\"first_sticker\": \"second_sticker\", \"second_sticker\": \"first_sticker\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "6f4647b6-b2c2-4729-b35d-44226cb45a56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[['buffer_sticker', 'first_sticker', 'second_sticker', 'commutator', 'commutator_simplified']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "28d4ed42-ee41-4fed-ae3f-4a3c8a7b1951",
    "metadata": {},
    "outputs": [
     {
@@ -455,44 +491,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>139</th>\n",
-       "      <td>UFR</td>\n",
-       "      <td>BUR</td>\n",
-       "      <td>LDB</td>\n",
-       "      <td>U' L U R U' L' U R'</td>\n",
-       "      <td>[U' L U,  R]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
+       "      <th>94</th>\n",
        "      <td>UFR</td>\n",
        "      <td>DBL</td>\n",
-       "      <td>UBL</td>\n",
-       "      <td>D R D' R2 D R U2 R' D' R U2 R D R' D'</td>\n",
-       "      <td>D R D' R': [R' D R,  U2]</td>\n",
+       "      <td>LDF</td>\n",
+       "      <td>L a c k r i g h t p a r e n t h e s i s .</td>\n",
+       "      <td>[D2,  F' [R U' R']</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>80</th>\n",
+       "      <th>101</th>\n",
+       "      <td>UFR</td>\n",
+       "      <td>DBL</td>\n",
+       "      <td>LUB</td>\n",
+       "      <td>R U R D' R' U' R D R2</td>\n",
+       "      <td>R: [U,  R D' R']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
        "      <td>UFR</td>\n",
        "      <td>DFL</td>\n",
-       "      <td>LUB</td>\n",
-       "      <td>R2 D2 R' U R D2 R' U' R'</td>\n",
-       "      <td>R: [R D2 R',  U]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145</th>\n",
-       "      <td>UFR</td>\n",
-       "      <td>DBR</td>\n",
-       "      <td>LDB</td>\n",
-       "      <td>R D' R2 D R U R' D' R U' R D R'</td>\n",
-       "      <td>R D' R’: [R’ D R,  U]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>182</th>\n",
-       "      <td>UFR</td>\n",
-       "      <td>BUL</td>\n",
        "      <td>FDR</td>\n",
-       "      <td>R U' L' U R U' L U R2</td>\n",
-       "      <td>R: [U' L' U,  R]</td>\n",
+       "      <td>R F2 R' U R U' F2 U R' U'</td>\n",
+       "      <td>R:[F2, R' U R U']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>UFR</td>\n",
+       "      <td>BDL</td>\n",
+       "      <td>UBR</td>\n",
+       "      <td>U D R' D R U' R' D' R D'</td>\n",
+       "      <td>D: [U,  R' D R]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105</th>\n",
+       "      <td>UFR</td>\n",
+       "      <td>DFR</td>\n",
+       "      <td>LUF</td>\n",
+       "      <td>R U' R' U2 R' D' R U2 R' D R2 U R'</td>\n",
+       "      <td>R U' R': [U2,  R' D' R]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -500,21 +536,21 @@
       ],
       "text/plain": [
        "    buffer_sticker first_sticker second_sticker  \\\n",
-       "139            UFR           BUR            LDB   \n",
-       "20             UFR           DBL            UBL   \n",
-       "80             UFR           DFL            LUB   \n",
-       "145            UFR           DBR            LDB   \n",
-       "182            UFR           BUL            FDR   \n",
+       "94             UFR           DBL            LDF   \n",
+       "101            UFR           DBL            LUB   \n",
+       "73             UFR           DFL            FDR   \n",
+       "8              UFR           BDL            UBR   \n",
+       "105            UFR           DFR            LUF   \n",
        "\n",
-       "                                commutator     commutator_simplified  \n",
-       "139                    U' L U R U' L' U R'              [U' L U,  R]  \n",
-       "20   D R D' R2 D R U2 R' D' R U2 R D R' D'  D R D' R': [R' D R,  U2]  \n",
-       "80                R2 D2 R' U R D2 R' U' R'          R: [R D2 R',  U]  \n",
-       "145        R D' R2 D R U R' D' R U' R D R'     R D' R’: [R’ D R,  U]  \n",
-       "182                  R U' L' U R U' L U R2          R: [U' L' U,  R]  "
+       "                                    commutator    commutator_simplified  \n",
+       "94   L a c k r i g h t p a r e n t h e s i s .       [D2,  F' [R U' R']  \n",
+       "101                      R U R D' R' U' R D R2         R: [U,  R D' R']  \n",
+       "73                   R F2 R' U R U' F2 U R' U'        R:[F2, R' U R U']  \n",
+       "8                     U D R' D R U' R' D' R D'          D: [U,  R' D R]  \n",
+       "105         R U' R' U2 R' D' R U2 R' D R2 U R'  R U' R': [U2,  R' D' R]  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 31,
    "id": "42cb1bee-5ee3-4ab4-9800-736d5afc71ee",
    "metadata": {},
    "outputs": [
@@ -535,7 +571,7 @@
        "(378, 5)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 32,
    "id": "6a15a579-576f-4dd7-88ea-c7d5942cfd6e",
    "metadata": {},
    "outputs": [
@@ -564,7 +600,7 @@
        "378"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
